Замінює файли з 7 ДЗ

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="navigation">
           <a href="./index.html" class="logo link navigation__logo">Web<span class="logo__part logo__part--dark-color">Studio</span></a>
@@ -49,14 +49,14 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero__container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="button hero__button" data-modal-open>Замовити послугу</button>
         </div>
-      </section>
+      </section> -->
       <section class="features section">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
@@ -330,7 +330,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="section footer">
       <div class="container footer__container">
         <div class="footer-logo-address-wrap">
           <a href="./index.html" class="logo link footer__logo">Web<span class="logo__part logo__part--light-color">Studio</span></a>
