--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <nav class="navigation">
           <a href="./index.html" class="logo link navigation__logo">Web<span class="logo__part">Studio</span></a>
@@ -48,7 +48,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="section">
         <div class="container">
@@ -191,7 +191,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer__container">
         <div class="footer-logo-address-wrap">
           <a href="./index.html" class="logo link footer__logo">Web<span class="logo__part logo__part--light-color">Studio</span></a>
@@ -253,6 +253,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
