Стилі адаптивної верстки футера і Hero

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       </div>
     </header> -->
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero__container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="button hero__button" data-modal-open>Замовити послугу</button>
         </div>
-      </section> -->
+      </section>
       <section class="features section">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
