Респонсивні елементи picture для Портфоліо і Команди

--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,22 @@
             <li class="project-item">
               <a class="card-link" href="#">
                 <div class="thumb-project-img">
-                  <img src="./images/portfolio-photo1.jpg" alt="Ноутбук" width="370" />
+                  <picture>
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo1.jpg 1x, 
+                    ./images/portfolio/portfolio-photo1-2x.jpg 2x"
+                    media="(min-width: 1200px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo1-tab.jpg 1x, 
+                    ./images/portfolio/portfolio-photo1-tab-2x.jpg 2x"
+                    media="(min-width: 768px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo1-mob.jpg 1x, 
+                    ./images/portfolio/portfolio-photo1-mob-2x.jpg 2x"
+                    media="(min-width: 320px)">
+                    <img 
+                  src="./images/portfolio/portfolio-photo1.jpg" alt="Ноутбук" width="450" />
+                  </picture>
                   <p class="card-text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
@@ -78,7 +93,22 @@
             <li class="project-item">
               <a class="card-link" href="#">
                 <div class="thumb-project-img">
-                  <img src="./images/portfolio-photo2.jpg" alt="Два хлопці з баскетбоьним мячем" width="370" />
+                  <picture>
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo2.jpg 1x, 
+                    ./images/portfolio/portfolio-photo2-2x.jpg 2x"
+                    media="(min-width: 1200px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo2-tab.jpg 1x, 
+                    ./images/portfolio/portfolio-photo2-tab-2x.jpg 2x"
+                    media="(min-width: 768px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo2-mob.jpg 1x, 
+                    ./images/portfolio/portfolio-photo2-mob-2x.jpg 2x"
+                    media="(min-width: 320px)">
+                    <img 
+                  src="./images/portfolio/portfolio-photo2.jpg" alt="Два хлопці з баскетбоьним мячем" width="450" />
+                  </picture>
                   <p class="card-text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
@@ -92,7 +122,22 @@
             <li class="project-item">
               <a class="card-link" href="#">
                 <div class="thumb-project-img">
-                  <img src="./images/portfolio-photo3.jpg" alt="Риба з надписом" width="370" />
+                  <picture>
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo3.jpg 1x, 
+                    ./images/portfolio/portfolio-photo3-2x.jpg 2x"
+                    media="(min-width: 1200px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo3-tab.jpg 1x, 
+                    ./images/portfolio/portfolio-photo3-tab-2x.jpg 2x"
+                    media="(min-width: 768px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo3-mob.jpg 1x, 
+                    ./images/portfolio/portfolio-photo3-mob-2x.jpg 2x"
+                    media="(min-width: 320px)">
+                    <img 
+                  src="./images/portfolio/portfolio-photo3.jpg" alt="Риба з надписом" width="450" />
+                  </picture>
                   <p class="card-text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
@@ -106,7 +151,22 @@
             <li class="project-item">
               <a class="card-link" href="#">
                 <div class="thumb-project-img">
-                  <img src="./images/portfolio-photo4.jpg" alt="Навушники" width="370" />
+                  <picture>
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo4.jpg 1x, 
+                    ./images/portfolio/portfolio-photo4-2x.jpg 2x"
+                    media="(min-width: 1200px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo4-tab.jpg 1x, 
+                    ./images/portfolio/portfolio-photo4-tab-2x.jpg 2x"
+                    media="(min-width: 768px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo4-mob.jpg 1x, 
+                    ./images/portfolio/portfolio-photo4-mob-2x.jpg 2x"
+                    media="(min-width: 320px)">
+                    <img 
+                  src="./images/portfolio/portfolio-photo4.jpg" alt="Навушники" width="450" />
+                  </picture>                  
                   <p class="card-text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
@@ -120,7 +180,22 @@
             <li class="project-item">
               <a class="card-link" href="#">
                 <div class="thumb-project-img">
-                  <img src="./images/portfolio-photo5.jpg" alt="Дві коробки" width="370" />
+                  <picture>
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo5.jpg 1x, 
+                    ./images/portfolio/portfolio-photo5-2x.jpg 2x"
+                    media="(min-width: 1200px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo5-tab.jpg 1x, 
+                    ./images/portfolio/portfolio-photo5-tab-2x.jpg 2x"
+                    media="(min-width: 768px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo5-mob.jpg 1x, 
+                    ./images/portfolio/portfolio-photo5-mob-2x.jpg 2x"
+                    media="(min-width: 320px)">
+                    <img 
+                  src="./images/portfolio/portfolio-photo5.jpg" alt="Дві коробки" width="450" />
+                  </picture>                 
                   <p class="card-text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
@@ -134,7 +209,22 @@
             <li class="project-item">
               <a class="card-link" href="#">
                 <div class="thumb-project-img">
-                  <img src="./images/portfolio-photo6.jpg" alt="Монітор компютера" width="370" />
+                  <picture>
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo6.jpg 1x, 
+                    ./images/portfolio/portfolio-photo6-2x.jpg 2x"
+                    media="(min-width: 1200px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo6-tab.jpg 1x, 
+                    ./images/portfolio/portfolio-photo6-tab-2x.jpg 2x"
+                    media="(min-width: 768px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo6-mob.jpg 1x, 
+                    ./images/portfolio/portfolio-photo6-mob-2x.jpg 2x"
+                    media="(min-width: 320px)">
+                    <img 
+                  src="./images/portfolio/portfolio-photo6.jpg" alt="Монітор компютера" width="450" />
+                  </picture>                  
                   <p class="card-text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
@@ -148,7 +238,22 @@
             <li class="project-item">
               <a class="card-link" href="#">
                 <div class="thumb-project-img">
-                  <img src="./images/portfolio-photo7.jpg" alt="Розгорнутий журнал" width="370" />
+                  <picture>
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo7.jpg 1x, 
+                    ./images/portfolio/portfolio-photo7-2x.jpg 2x"
+                    media="(min-width: 1200px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo7-tab.jpg 1x, 
+                    ./images/portfolio/portfolio-photo7-tab-2x.jpg 2x"
+                    media="(min-width: 768px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo7-mob.jpg 1x, 
+                    ./images/portfolio/portfolio-photo7-mob-2x.jpg 2x"
+                    media="(min-width: 320px)">
+                    <img 
+                  src="./images/portfolio/portfolio-photo7.jpg" alt="Розгорнутий журнал" width="450" />
+                  </picture>                  
                   <p class="card-text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
@@ -162,7 +267,22 @@
             <li class="project-item">
               <a class="card-link" href="#">
                 <div class="thumb-project-img">
-                  <img src="./images/portfolio-photo8.jpg" alt="Кулон-емблема" width="370" />
+                  <picture>
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo8.jpg 1x, 
+                    ./images/portfolio/portfolio-photo8-2x.jpg 2x"
+                    media="(min-width: 1200px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo8-tab.jpg 1x, 
+                    ./images/portfolio/portfolio-photo8-tab-2x.jpg 2x"
+                    media="(min-width: 768px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo8-mob.jpg 1x, 
+                    ./images/portfolio/portfolio-photo8-mob-2x.jpg 2x"
+                    media="(min-width: 320px)">
+                    <img 
+                  src="./images/portfolio/portfolio-photo8.jpg" alt="Кулон-емблема" width="450" />
+                  </picture>                   
                   <p class="card-text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
@@ -176,7 +296,22 @@
             <li class="project-item">
               <a class="card-link" href="#">
                 <div class="thumb-project-img">
-                  <img src="./images/portfolio-photo9.jpg" alt="Людина працює на ноутбуці" width="370" />
+                  <picture>
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo9.jpg 1x, 
+                    ./images/portfolio/portfolio-photo9-2x.jpg 2x"
+                    media="(min-width: 1200px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo9-tab.jpg 1x, 
+                    ./images/portfolio/portfolio-photo9-tab-2x.jpg 2x"
+                    media="(min-width: 768px)">
+                    <source srcset="
+                    ./images/portfolio/portfolio-photo9-mob.jpg 1x, 
+                    ./images/portfolio/portfolio-photo9-mob-2x.jpg 2x"
+                    media="(min-width: 320px)">
+                    <img 
+                  src="./images/portfolio/portfolio-photo9.jpg" alt="Людина працює на ноутбуці" width="450" />
+                  </picture>                   
                   <p class="card-text-overlay">
                     Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
@@ -191,7 +326,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer__container">
         <div class="footer-logo-address-wrap">
           <a href="./index.html" class="logo link footer__logo">Web<span class="logo__part logo__part--light-color">Studio</span></a>
@@ -241,9 +376,9 @@
         <div class="sign-in">
           <b class="sign-text">Підпишіться на розсилку</b>
           <form class="sign-form">
-            <div class="sign-field">
+            
               <input type="text" name="mail" class="input-sign-mail" placeholder="E-mail" />
-            </div>
+            
             <button type="submit" class="btn-sign">
               Підписатися
               <svg class="sign-icon" width="24" height="24">
@@ -253,6 +388,6 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
