--- a/index.html
+++ b/index.html
@@ -130,7 +130,13 @@
           <h2 class="people__title">Наша команда</h2>
           <ul class="people-list list">
             <li class="people-list__item">
-              <img src="./images/photo1.jpg" alt="Молодий чоловік в темній сорочці" width="270" />
+              <picture>
+                <source srcset="./images/photo1.jpg 1x, ./images/photo1-2x.jpg 2x" media="(min-width: 1200px)" />
+                <source srcset="./images/photo1-tab.jpg 1x, ./images/photo1-tab-2x.jpg 2x" media="(min-width: 768px)" />
+                <source srcset="./images/photo1-mob.jpg 1x, ./images/photo1-mob-2x.jpg 2x" media="(min-width: 320px)" />
+                <img src="./images/photo1.jpg" alt="Молодий чоловік в темній сорочці" width="450" />
+              </picture>
+
               <div class="people-list__wrap">
                 <h3 class="people-list__subtitle">Ігор Дем'яненко</h3>
                 <p lang="en" class="people-list__text">Product Designer</p>
@@ -167,7 +173,12 @@
               </div>
             </li>
             <li class="people-list__item">
-              <img src="./images/photo2.jpg" alt="Дівчина блондинка в окулярах" width="270" />
+              <picture>
+                <source srcset="./images/photo2.jpg 1x, ./images/photo2-2x.jpg 2x" media="(min-width: 1200px)" />
+                <source srcset="./images/photo2-tab.jpg 1x, ./images/photo2-tab-2x.jpg 2x" media="(min-width: 768px)" />
+                <source srcset="./images/photo2-mob.jpg 1x, ./images/photo2-mob-2x.jpg 2x" media="(min-width: 320px)" />
+                <img src="./images/photo2.jpg" alt="Дівчина блондинка в окулярах" width="450" />
+              </picture>
               <div class="people-list__wrap">
                 <h3 class="people-list__subtitle">Ольга Рєпіна</h3>
                 <p lang="en" class="people-list__text">Frontend Developer</p>
@@ -204,7 +215,12 @@
               </div>
             </li>
             <li class="people-list__item">
-              <img src="./images/photo3.jpg" alt="Молодий чоловік в світлій сорочці" width="270" />
+              <picture>
+                <source srcset="./images/photo3.jpg 1x, ./images/photo3-2x.jpg 2x" media="(min-width: 1200px)" />
+                <source srcset="./images/photo3-tab.jpg 1x, ./images/photo3-tab-2x.jpg 2x" media="(min-width: 768px)" />
+                <source srcset="./images/photo3-mob.jpg 1x, ./images/photo3-mob-2x.jpg 2x" media="(min-width: 320px)" />
+                <img src="./images/photo3.jpg" alt="Молодий чоловік в світлій сорочці" width="450" />
+              </picture>
               <div class="people-list__wrap">
                 <h3 class="people-list__subtitle">Микола Тарасов</h3>
                 <p lang="en" class="people-list__text">Marketing</p>
@@ -241,7 +257,12 @@
               </div>
             </li>
             <li class="people-list__item">
-              <img src="./images/photo4.jpg" alt="Молодий чоловік в окулярах в темній футболці" width="270" />
+              <picture>
+                <source srcset="./images/photo4.jpg 1x, ./images/photo4-2x.jpg 2x" media="(min-width: 1200px)" />
+                <source srcset="./images/photo4-tab.jpg 1x, ./images/photo4-tab-2x.jpg 2x" media="(min-width: 768px)" />
+                <source srcset="./images/photo4-mob.jpg 1x, ./images/photo4-mob-2x.jpg 2x" media="(min-width: 320px)" />
+                <img src="./images/photo4.jpg" alt="Молодий чоловік в окулярах в темній футболці" width="450" />
+              </picture>
               <div class="people-list__wrap">
                 <h3 class="people-list__subtitle">Михайло Єрмаков</h3>
                 <p lang="en" class="people-list__text">UI Designer</p>
