--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
 
   <body>
-    <!-- <header class="header">
-      <div class="container header__container">
+    <header class="header">
+      <div class=" header__container">
         <nav class="navigation">
           <a href="./index.html" class="logo link navigation__logo">Web<span class="logo__part logo__part--dark-color">Studio</span></a>
           <ul class="site-nav list">
@@ -48,8 +48,20 @@
             >
           </li>
         </ul>
+        <button class="btn-menu" type="button">
+          <svg class="btn-menu__open" width="40" height="40">
+            <use href="./images/icons.svg#icon-menu-open"></use>
+          </svg>
+        </button>
+        <div>
+          <button class="btn-menu" type="button">
+            <svg class="btn-menu__close" width="40" height="40">
+              <use href="./images/icons.svg#icon-menu-close"></use>
+            </svg>
+          </button>
+        </div>
       </div>
-    </header> -->
+    </header>
     <main>
       <section class="hero">
         <div class="container hero__container">
