Правки після перевірки ДЗ

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
       <div class="container footer__container">
         <div class="footer-logo-address-wrap">
           <a href="./index.html" class="logo link footer__logo">Web<span class="logo__part logo__part--light-color">Studio</span></a>
-          <address>
+          <address class="address footer__address">
             <ul class="address-list list">
               <li class="address-items">
                 <a href="https://goo.gl/maps/QsHPE56uMVztVqJ69" target="_blank" rel="noreferrer nofollow noopener" class="address-item link">м. Київ, пр-т Лесі Українки, 26 </a>
