--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
           </button>
           <ul class="nav-menu list">
             <li class="nav-menu__item"><a href="./index.html" class="nav-menu__link link">Студія</a></li>
-            <li class="nav-menu__item"><a href="./portfolio.html" class="nav-menu__link current link">Портфоліо</a></li>
+            <li class="nav-menu__item"><a href="./portfolio.html" class="nav-menu__link nav-menu__current link">Портфоліо</a></li>
             <li class="nav-menu__item"><a href="#" class="nav-menu__link link">Контакти</a></li>
           </ul>
           <div class="mob-menu-bottom">
